# moe-scraper

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  moe-scraper.yaml.example  rust-toolchain.toml
resources/migrations/2024-10-20-101640_init_schema/: down.sql  up.sql
resources/migrations/2025-10-28-212425_add_amiami/: down.sql  up.sql
src/: build.rs
src/lib/: config.rs  domain.rs  outbound.rs
src/lib/domain/: melonbooks.rs  mod.rs
src/lib/domain/amiami/: ports.rs  service.rs
src/lib/domain/amiami/models/: availability.rs  mod.rs  product.rs
src/lib/domain/melonbooks/: models.rs  ports.rs  service.rs
src/lib/domain/melonbooks/models/: artist.rs  availability.rs  product.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: handlers.rs  mod.rs
src/lib/inbound/http/handlers/: amiami_routes.rs  melonbooks_routes.rs  mod.rs
src/lib/outbound/: amiami_discord_notifier.rs  melonbooks_discord_notifier.rs  melonbooks_scraper.rs  mod.rs  sqlite.rs
src/lib/outbound/amiami_scraper/: mod.rs  parser.rs
src/lib/outbound/melonbooks_scraper/: mod.rs  parser.rs
src/lib/outbound/sqlite/: melonbooks.rs  mod.rs  schema.rs
src/lib/outbound/sqlite/amiami/: mod.rs  models.rs
src/lib/outbound/sqlite/melonbooks/: mod.rs  models.rs
templates/: amiami-availability-config.html  amiami.html  head.html  header.html  melonbooks-artist-config.html  melonbooks-title-skip-config.html  melonbooks.html  style.css
test-data/: product-details.html  product-list.html  product-music.html
test-data/amiami/: product-list.json
