[package]
name = "moe-scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "moe_scraper"
path = "src/lib/lib.rs"

[[bin]]
name = "moe-scraper"
path = "src/bin/server/main.rs"

[dependencies]
anyhow = { version = "1.0.89" }
axum = { version = "0.7.7" }
chrono = { version = "0.4.38" }
derivative = { version = "2.2.0" }
diesel = { version = "2.2.4", features = ["chrono", "r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
env_logger = { version = "0.11.5" }
figment = { version = "0.10.19", features = ["yaml", "env"] }
itertools = { version = "0.13.0" }
log = { version = "0.4.22" }
r2d2 = { version = "0.8.10" }
regex = { version = "1.11.0" }
reqwest = { version = "0.12.8", features = ["cookies", "rustls-tls"]}
select = { version = "0.6.0" }
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.4" }
thiserror = { version = "1.0.63" }
tokio = { version = "1.40.0", features = ["macros", "fs", "net", "rt-multi-thread"] }
tokio-cron-scheduler = { version = "0.13.0" }
webhook = { version = "2.1.2" }