[package]
name = "moe-scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "moe_scraper"
path = "src/lib/lib.rs"

[[bin]]
name = "moe-scraper"
path = "src/bin/server/main.rs"

[dependencies]
anyhow = { version = "1.0.89" }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.4.0" }
axum = { version = "0.8.6" }
chrono = { version = "0.4.38", features = ["serde"] }
debug-ignore = { version = "1.0.5" }
diesel = { version = "2.2.4", features = ["chrono", "r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
figment = { version = "0.10.19", features = ["yaml", "env"] }
itertools = { version = "0.14.0" }
log = { version = "0.4.22" }
r2d2 = { version = "0.8.10" }
regex = { version = "1.11.0" }
reqwest = { version = "0.12.8", features = ["cookies", "json"]}
select = { version = "0.6.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132" }
serde_with = { version = "3.11.0" }
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.40.0", features = ["macros", "fs", "net", "rt-multi-thread"] }
tokio-cron-scheduler = { version = "0.15.0" }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
webhook = { version = "2.1.2" }